# qbootctrl-gui

./: .gitmodules  CMakeLists.txt  README.md
misc/: qbootctl-gui.desktop
src/: daemon.c  daemon.h  ipc.c  ipc.h  main.c  ui.c  ui.h  utility.c  utility.h
